[profile.release]
panic = "unwind"

[workspace]
members = [
#	"pallets/*",
	"pallets/acurast/common",
	"pallets/marketplace",
	"pallets/acurast",
	"pallets/acurast-xcm-receiver",
	"pallets/acurast-xcm-sender",
	"pallets/acurast-xcm-sender",
	"pallets/acurast-fulfillment-receiver",
	"pallets/fee-manager",
	"pallets/proxy",


	"p256-crypto",
]
