[profile.release]
panic = "unwind"

[workspace]
resolver = "2"
members = [
	"pallets/*",
	"pallets/acurast/common",
	"pallets/marketplace/reputation",
	"p256-crypto",
]
exclude = ["pallets/proxy"]

[workspace.package]
authors = [ "Papers AG" ]
repository = "https://github.com/Acurast/acurast-core"
version = "0.2.4"

# TODO: Temporary workaround (https://substrate.stackexchange.com/questions/9870)
[patch.crates-io]
parity-scale-codec = { git = "https://github.com/paritytech/parity-scale-codec.git", tag = "v3.6.5" }
