[package]
name = "proxy-emulation"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Juan Ignacio Rios <juani.rios.99@gmail.com>"]
edition = "2021"

[dependencies]
# crates.io
serde = { version = "1.0.137", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
proc-macro2 = "1.0.40"
scale-info = { version = "2.1.2", features = ["derive"] }
rand = "0.8.5"

# Substrate
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
#sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
#sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
#pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
#sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }


#cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.26" }
#cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.26" }
#cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.26" }
#cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.26" }
#parachain-info = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.26" }
#cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.26" }
#cumulus-test-relay-sproof-builder = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.26" }

#
#xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.26"}
#xcm-simulator = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.26" }
#xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.26" }
#xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.26" }
#pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.26" }
#polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.26"}
#polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.26"}
#polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.26"}
#
#acurast-runtime = { path = "../../../acurast-substrate/runtime"}
#parachain-template-runtime = { path = "../../../substrate-parachain-template/runtime" }
#polkadot-runtime = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.26" }
#statemint-runtime = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.26" }
#
#polkadot-primitives = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.26"}
#
#pallet-assets = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
emulations = { path = "../." }
#pallet-acurast = { path = "../../../acurast-core/pallets/acurast", default-features = false }
#acurast-proxy = { path = "../../../acurast-core/pallets/proxy", default-features = false }
#hex-literal = "0.3.4"

[features]
default = ["std"]
std = [
    "emulations/std"
#    "xcm-executor/std",
#    "polkadot-primitives/std",
#    "acurast-proxy/std",

]