[package]
name = "pallet-acurast-fulfillment-receiver"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.0.0", features = ["derive"], default-features = false }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.29" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }

# Acurast
pallet-acurast = { path = "../acurast", default-features = false } # needed for the Fulfillment type, but eventually the types in pallet-acurast should be moved to a shared package.

[dev-dependencies]
hex-literal = "0.3"
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }

[features]
default = ["std"]

std = [
  "codec/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "sp-core/std",
  "sp-io/std",
  "sp-std/std",
  "pallet-acurast/std",
]
try-runtime = ["frame-support/try-runtime"]