[package]
name = "pallet-acurast-xcm-sender"
authors = ["Papers AG"]
description = "Pallet for interacting with Acurast enabled parachains."
version = "0.0.1"
license = "Unlicense"
homepage = "https://docs.acurast.com/"
edition = "2021"
publish = false
repository = "https://github.com/acurast/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.33" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }

# Polkadot
pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.33"}
xcm = { package = "xcm", git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.33"}
xcm-executor = { package = "xcm-executor", git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.33"}
xcm-builder = { package = "xcm-builder", git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.33"}

[dev-dependencies]
# Substrate
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }

# Polkadot
xcm = { package = "xcm", git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.33"}
xcm-simulator = { package = "xcm-simulator", git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.33"}
xcm-executor = { package = "xcm-executor", git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.33"}
xcm-builder = { package = "xcm-builder", git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.33"}
pallet-xcm = { package = "pallet-xcm", git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.33"}
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.33"}
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.33"}
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.33"}

# Acurast
pallet-acurast-receiver = { package = "pallet-acurast-xcm-receiver", path = "../acurast-xcm-receiver" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
