[package]
name = "pallet-acurast"
authors = ["Papers AG"]
description = "FRAME pallet template for defining custom runtime logic."
version = "0.0.1"
license = "Unlicense"
homepage = "https://docs.acurast.com/"
repository = "https://github.com/acurast"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.3.0", features = ["derive"], default-features = false }
acurast-common = { path = "./common", default-features = false, features = ["attestation"] }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.33" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }
pallet-assets = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }

# Polkadot
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.33" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.33" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.33" }

# benchmarks
hex-literal = { version = "0.3", optional = true }
parachain-info = { git = "https://github.com/paritytech/cumulus", default-features = false, optional = true, branch = "polkadot-v0.9.33" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.33" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.33" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.33" }
parachains-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.33", optional = true, default-features = false }

[dev-dependencies]
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
hex-literal = "0.3"

sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }
parachain-info = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.33" }
parachains-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.33", default-features = false }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "hex-literal",
  "parachain-info",
  "pallet-balances",
  "sp-core",
  "pallet-timestamp",
  "parachains-common",
]

std = [
  "codec/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "acurast-common/std",
  "pallet-assets/std",
  "pallet-balances/std",
  "pallet-timestamp/std",
  "parachain-info/std",
  "parachains-common/std",
  "scale-info/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-version/std",
  "xcm-builder/std",
  "xcm-executor/std",
  "xcm/std",
]
try-runtime = ["frame-support/try-runtime"]
