[package]
name = "pallet-acurast"
authors = ["Papers AG"]
description = "FRAME pallet template for defining custom runtime logic."
version = "0.2.0"
license = "MIT"
homepage = "https://docs.acurast.com/"
repository = "https://github.com/acurast"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.3.0", features = ["derive"], default-features = false }
acurast-common = { path = "./common", default-features = false, features = ["attestation"] }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.43" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }

# benchmarks
hex-literal = { version = "0.3", optional = true }
parachain-info = { git = "https://github.com/paritytech/cumulus", default-features = false, optional = true, branch = "polkadot-v0.9.43" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.43" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.43" }
pallet-assets = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.43" }
parachains-common = { git = "https://github.com/paritytech/cumulus", default-features = false, optional = true, branch = "polkadot-v0.9.43" }

[dev-dependencies]
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
hex-literal = "0.3"

sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.43" }
parachains-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.43" }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "hex-literal",
  "parachain-info",
  "pallet-balances/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "pallet-assets/runtime-benchmarks",
  "parachains-common",
]

std = [
  "codec/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "acurast-common/std",
  "scale-info/std",
  "sp-core/std",
  "sp-io/std",
  "sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
